fix: spacing, align

--- a/src/stylesheets/about-ted.css
+++ b/src/stylesheets/about-ted.css
@@ -1,3 +1,8 @@
+.about-ted {
+  display: flex;
+  justify-content: center;
+}
+
 .about-ted .card {
   margin-top: 10%;
   border-radius: 0%;
