--- a/src/stylesheets/speakers.css
+++ b/src/stylesheets/speakers.css
@@ -23,6 +23,7 @@
   font-weight: normal;
   letter-spacing: -1px;
   font-size: 140%;
+  text-align: justify;
 }
 
 .speakers h6 {
